--- a/GoAuction.Web/Pages/Home.razor
+++ b/GoAuction.Web/Pages/Home.razor
@@ -1,10 +1,20 @@
 ﻿@page "/"
 @inject NavigationManager NavigationManager
 
-<PageTitle>Home</PageTitle>
-
-<h1>Hello, world!</h1>
-<button @onclick="NavigateToLogin">Iniciar Sesión</button>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+            <h1>Welcome to GoAuction</h1>
+            <p>GoAuction is a platform where you can buy and sell items through auctions.</p>
+            <p>Register now and start bidding!</p>
+            <button class="btn btn-primary" @onclick="NavigateToRegister">Register</button>
+            <button class="btn btn-secondary" @onclick="NavigateToLogin">Login</button>
+        </div>
+        <div class="col-md-6">
+            <img src="images/auction.jpg" class="img-fluid" alt="Auction">
+        </div>
+    </div>
+</div>
 
 
 @code {
@@ -12,5 +22,10 @@
     {
         NavigationManager.NavigateTo("/login");
     }
+
+    private void NavigateToRegister()
+    {
+        NavigationManager.NavigateTo("/register");
+    }
 }
-Welcome to your new app.
+
