--- a/GoAuction.WebApp/_Imports.razor
+++ b/GoAuction.WebApp/_Imports.razor
@@ -6,6 +6,5 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using GoAuction.Web
-@using GoAuction.Web.Layout
-
+@using GoAuction.WebApp
+@using GoAuction.WebApp.Layout
