--- a/GoAuction.Web/Pages/Home.razor
+++ b/GoAuction.Web/Pages/Home.razor
@@ -1,5 +1,24 @@
 ﻿@page "/"
-@inject NavigationManager NavigationManager
 
-
+<div class="content-page">
+    <div class="top">
+        <div class="search-container">
+            <input placeholder="Search..." />
+            <img src="search.png" alt="Buscar" class="search-icon" />
+        </div>
+        <select class="form-select" aria-label="Default select example">
+            <option selected>Open this select menu</option>
+            <option value="1">One</option>
+            <option value="2">Two</option>
+            <option value="3">Three</option>
+        </select>
+        <label>Sort by:</label>
+        <select class="form-select" aria-label="Default select example">
+            <option selected>Open this select menu</option>
+            <option value="1">One</option>
+            <option value="2">Two</option>
+            <option value="3">Three</option>
+        </select>
+    </div>
+</div>
 
