--- a/GoAuction.Web/Pages/Login.razor
+++ b/GoAuction.Web/Pages/Login.razor
@@ -40,7 +40,8 @@
           <span class="span">Forgot password?</span>
         </div>
         <button class="button-submit">Sign In</button>
-        <p class="p">Don't have an account? <span class="span">Sign In</span>
+        <p class="p">
+            Don't have an account? <a class="span" href="/register">Sign Up</a>
 
         </p><p class="p line">Or With</p>
 
