--- a/GoAuction.Web/Pages/Register.razor
+++ b/GoAuction.Web/Pages/Register.razor
@@ -234,7 +234,7 @@
 @code {
     private void ReturnBack()
     {
-        NavigationManager.NavigateTo("/");
+        NavigationManager.NavigateTo("/login");
     }
 
     private void GoConfirmationPage()
